tools/tests/errors/surf_arity_04.ki
# same keyword passed twice
var f = Function(a, b):
    return a
discard f(a = 1, a = 2)
